--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,11 @@ php:
   - 5.3
   - 5.4
 
+install:
+  phpunit
+
+script:
+  phpunit
 #before_install:
 #  - cd ..; git clone https://github.com/owncloud/appframework; cd contacts
 #  - sudo add-apt-repository -y ppa:chris-lea/node.js
