--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ install:
   phpunit
 
 script:
+  which phpunit
   phpunit
 #before_install:
 #  - cd ..; git clone https://github.com/owncloud/appframework; cd contacts
