--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,8 @@ php:
   - 5.3
   - 5.4
 
-install:
-  phpunit
-
 script:
-  whereis phpunit
-  phpunit
+  - phpunit --configuration tests/phpunit.xml
 #before_install:
 #  - cd ..; git clone https://github.com/owncloud/appframework; cd contacts
 #  - sudo add-apt-repository -y ppa:chris-lea/node.js
