--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ php:
 script:
   - phpunit --configuration tests/phpunit.xml
 
+before_script: composer install
+
 #before_install:
 #  - cd ..; git clone https://github.com/owncloud/appframework; cd contacts
 #  - sudo add-apt-repository -y ppa:chris-lea/node.js
