--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,10 @@ php:
 script:
   - phpunit --configuration tests/phpunit.xml
 
-before_script: composer install
+before_script:
+  - composer install
+  - ./tests/install_dependencies.sh
 
-#before_install:
 #  - cd ..; git clone https://github.com/owncloud/appframework; cd contacts
 #  - sudo add-apt-repository -y ppa:chris-lea/node.js
 #  - sudo apt-get update
