--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ before_script:
 #  - tar xjf phantomjs-1.9.0-linux-x86_64.tar.bz2
 #  - sudo ln -s $(pwd)/phantomjs-1.9.0-linux-x86_64/bin/phantomjs /usr/bin/phantomjs
 
-#script:
-#  - make unit-tests
+script:
+  - make unit-tests
   
 #&& make javascript-tests
