--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: php
 php:
   - 5.3
+  - 5.4
 
-#  - 5.4
 #  - 5.5
 
 branches:
@@ -10,16 +10,15 @@ branches:
     - share
 
 env:
-  - DB=mysql
+    - DB=sqlite
 
+#  - DB=mysql
 #  - DB=pgsql
-#  - DB=sqlite
 
-before_script:
-  - composer install
+before_install:
   - ./tests/install_dependencies.sh
+  - tests/setup_owncloud.sh
 
-#  - cd ..; git clone https://github.com/owncloud/appframework; cd contacts
 #  - sudo add-apt-repository -y ppa:chris-lea/node.js
 #  - sudo apt-get update
 #  - sudo apt-get -y install nodejs
@@ -28,6 +27,6 @@ before_script:
 #  - sudo ln -s $(pwd)/phantomjs-1.9.0-linux-x86_64/bin/phantomjs /usr/bin/phantomjs
 
 script:
-  - phpunit --configuration tests/phpunit.xml
-  
+  - phpunit --configuration tests/phpunit.xml --testsuite unit-tests
+
 #&& make javascript-tests
