--- a/.jshintrc
+++ b/.jshintrc
@@ -9,5 +9,6 @@
   "jquery": true,
   "browser": true,
   "devel": true,
-  "globals": { "OC": false }
+  "globals": { "OC": false },
+  "maxerr": 100
 }
