Scrutinizer JS fixes

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -35,15 +35,15 @@ tools:
                         language_construct_spacing_sniff: true
                         operator_spacing_sniff: true
                         control_structure_spacing_sniff: true
-                        function_spacing_sniff: true
+                        function_spacing_sniff: false
                         scope_keyword_spacing_sniff: true
                         semicolon_spacing_sniff: true
-                        object_operator_spacing_sniff: true
+                        object_operator_spacing_sniff: false
                     functions:
                         lowercase_function_keywords_sniff: true
                     commenting:
                         class_comment_sniff: true
-                        doc_comment_alignment_sniff: true
+                        doc_comment_alignment_sniff: false
                         function_comment_throw_tag_sniff: true
                     control_structures:
                         lowercase_declaration_sniff: true
@@ -51,6 +51,9 @@ tools:
                         double_quote_usage_sniff: true
                     operators:
                         valid_logical_operators_sniff: true
+                psr1:
+                    files:
+                        side_effects_sniff: false
                 psr2:
                     classes:
                         class_declaration_sniff: false
