Update Scrutinizer config

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -24,48 +24,46 @@ tools:
                 camel_case_variable_name: true
                 superglobals: false
 
-    php_code_sniffer:
-        config:
-            sniffs:
-                generic:
-                    white_space:
-                        disallow_space_indent_sniff: true
-                squiz:
-                    white_space:
-                        logical_operator_spacing_sniff: false
-                        language_construct_spacing_sniff: true
-                        operator_spacing_sniff: true
-                        control_structure_spacing_sniff: true
-                        function_spacing_sniff: false
-                        scope_keyword_spacing_sniff: true
-                        semicolon_spacing_sniff: true
-                        object_operator_spacing_sniff: false
-                    functions:
-                        lowercase_function_keywords_sniff: true
-                    commenting:
-                        class_comment_sniff: true
-                        doc_comment_alignment_sniff: false
-                        function_comment_throw_tag_sniff: true
+#     php_code_sniffer:
+#         config:
+#             sniffs:
+#                 generic:
+#                     white_space:
+#                         disallow_space_indent_sniff: true
+#                 squiz:
+#                     white_space:
+#                         logical_operator_spacing_sniff: false
+#                         language_construct_spacing_sniff: true
+#                         operator_spacing_sniff: true
+#                         control_structure_spacing_sniff: true
+#                         function_spacing_sniff: false
+#                         scope_keyword_spacing_sniff: true
+#                         semicolon_spacing_sniff: true
+#                         object_operator_spacing_sniff: false
+#                     functions:
+#                         lowercase_function_keywords_sniff: true
+#                     commenting:
+#                         class_comment_sniff: true
+#                         doc_comment_alignment_sniff: false
+#                         function_comment_throw_tag_sniff: true
+#                     strings:
+#                         double_quote_usage_sniff: true
+#                     operators:
+#                         valid_logical_operators_sniff: true
+#                 psr1:
+#                     files:
+#                         side_effects_sniff: false
+#                 psr2:
+#                     classes:
+#                         class_declaration_sniff: false
+#                     namespaces:
+#                         namespace_declaration_sniff: true
+#                 pear:
+#                     commenting:
+#                         inline_comment_sniff: true
 #                     control_structures:
-#                         lowercase_declaration_sniff: true
-                    strings:
-                        double_quote_usage_sniff: true
-                    operators:
-                        valid_logical_operators_sniff: true
-                psr1:
-                    files:
-                        side_effects_sniff: false
-                psr2:
-                    classes:
-                        class_declaration_sniff: false
-                    namespaces:
-                        namespace_declaration_sniff: true
-                pear:
-                    commenting:
-                        inline_comment_sniff: true
-                    control_structures:
-                        control_signature_sniff: true
-                    naming_conventions:
-                        valid_function_name_sniff: true
-                        valid_class_name_sniff: true
+#                         control_signature_sniff: true
+#                     naming_conventions:
+#                         valid_function_name_sniff: true
+#                         valid_class_name_sniff: true
 
