--- a/.jshintrc
+++ b/.jshintrc
@@ -9,6 +9,6 @@
   "jquery": true,
   "browser": true,
   "devel": true,
-  "globals": { "OC": false },
+  "globals": { "OC": false, "Modernizr": false, "error": false },
   "maxerr": 100
 }
