--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,5 +1,5 @@
 build_failure_conditions:
-    - 'elements.rating(<= D).exists'               # No classes/methods with a rating of D or worse
+    #- 'elements.rating(<= D).exists'               # No classes/methods with a rating of D or worse
     - 'elements.rating(<= D).new.exists'           # No new classes/methods with a rating of D or worse
 
     - 'issues.label("coding-style").new.exists'    # No new coding style issues allowed
