--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ env:
 #  - DB=pgsql
 
 before_install:
-  - ./tests/install_dependencies.sh
-  - tests/setup_owncloud.sh
+  - wget https://raw.githubusercontent.com/owncloud/administration/master/travis-ci/before_install.sh
+  - bash ./before_install.sh chat master $D
 
 #  - sudo add-apt-repository -y ppa:chris-lea/node.js
 #  - sudo apt-get update
