--- a/.travis.yml
+++ b/.travis.yml
@@ -3,28 +3,33 @@ php:
   - 5.4
   - 5.5
   - 5.6
+  - hhvm
+  - 7
+
+env:
+  global:
+    - CORE_BRANCH=master
+    - APP_NAME=contacts
+  matrix:
+    - DB=sqlite
 
 branches:
   only:
     - master
-    - /^stable\d+(\.\d+)?$/
-
-env:
-  global:
-  - CORE_BRANCH=stable8.1
-  matrix:
-  - DB=sqlite
+    - /^stable\d*$/
 
 before_install:
   - wget https://raw.githubusercontent.com/owncloud/administration/master/travis-ci/before_install.sh
-  - bash ./before_install.sh contacts $CORE_BRANCH $DB
-  - cd ../core
-  - php occ app:enable contacts
+  - bash ./before_install.sh $APP_NAME $CORE_BRANCH $DB
 
 script:
-  - cd apps/contacts
-  - find . -name \*.php -not -path './l10n/*' -exec php -l "{}" \;
-  - phpunit --configuration tests/phpunit.xml --testsuite unit-tests --coverage-clover clover.xml
+  # Test lint
+  - cd ../core/apps/$APP_NAME
+  - find . -name \*.php -exec php -l "{}" \;
+
+  # Run phpunit tests
+  - cd tests
+  - phpunit --configuration phpunit.xml --testsuite unit-tests
 
   # Create coverage report
   - sh -c "if [ '$TRAVIS_PHP_VERSION' != 'hhvm' ]; then wget https://scrutinizer-ci.com/ocular.phar; fi"
@@ -32,11 +37,11 @@ script:
 
 matrix:
   include:
-  - php: 5.4
-    env: DB=mysql
-#  - php: 5.4
-#    env: DB=pgsql
-
+    - php: 5.4
+      env: DB=mysql
+    - php: 5.4
+      env: DB=pgsql
   allow_failures:
-  - php: hhvm
+    - php: hhvm
+    - php: 7
   fast_finish: true
