--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ env:
 
 before_install:
   - wget https://raw.githubusercontent.com/owncloud/administration/master/travis-ci/before_install.sh
-  - bash ./before_install.sh contacts master $DB
+  - bash ./before_install.sh contacts stable8 $DB
 
 #  - sudo add-apt-repository -y ppa:chris-lea/node.js
 #  - sudo apt-get update
