--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 language: php
 php:
-  - 5.3
   - 5.4
   - 5.5
+  - 5.6
 
 branches:
-  except:
-    - share
+  only:
+    - master
+    - /^stable\d*$/
 
 env:
     - DB=sqlite
