--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,12 @@ before_install:
 #  - sudo ln -s $(pwd)/phantomjs-1.9.0-linux-x86_64/bin/phantomjs /usr/bin/phantomjs
 
 script:
-  - sh -c "if [ '$DB' = 'sqlite' ]; then ant test; fi"
-  - phpunit --configuration tests/phpunit.xml --testsuite unit-tests
+  - find . -name \*.php -exec php -l "{}" \;
+  - phpunit --configuration tests/phpunit.xml --testsuite unit-tests --coverage-clover clover.xml
+
+
+  # Create coverage report
+  - sh -c "if [ '$TRAVIS_PHP_VERSION' != 'hhvm' ]; then wget https://scrutinizer-ci.com/ocular.phar; fi"
+  - sh -c "if [ '$TRAVIS_PHP_VERSION' != 'hhvm' ]; then php ocular.phar code-coverage:upload --format=php-clover clover.xml; fi"
 
 #&& make javascript-tests
