--- a/.travis.yml
+++ b/.travis.yml
@@ -10,28 +10,33 @@ branches:
     - /^stable\d*$/
 
 env:
-    - DB=sqlite
-    - DB=mysql
-#  - DB=pgsql
+  global:
+  - CORE_BRANCH=master
+  matrix:
+  - DB=sqlite
 
 before_install:
   - wget https://raw.githubusercontent.com/owncloud/administration/master/travis-ci/before_install.sh
-  - bash ./before_install.sh contacts master $DB
-
-#  - sudo add-apt-repository -y ppa:chris-lea/node.js
-#  - sudo apt-get update
-#  - sudo apt-get -y install nodejs
-#  - wget https://phantomjs.googlecode.com/files/phantomjs-1.9.0-linux-x86_64.tar.bz2
-#  - tar xjf phantomjs-1.9.0-linux-x86_64.tar.bz2
-#  - sudo ln -s $(pwd)/phantomjs-1.9.0-linux-x86_64/bin/phantomjs /usr/bin/phantomjs
+  - bash ./before_install.sh contacts $CORE_BRANCH $DB
+  - cd ../core
+  - php occ app:enable contacts
 
 script:
-  - find . -name \*.php -exec php -l "{}" \;
+  - cd apps/contacts
+  - find . -name \*.php -not -path './l10n/*' -exec php -l "{}" \;
   - phpunit --configuration tests/phpunit.xml --testsuite unit-tests --coverage-clover clover.xml
-
 
   # Create coverage report
   - sh -c "if [ '$TRAVIS_PHP_VERSION' != 'hhvm' ]; then wget https://scrutinizer-ci.com/ocular.phar; fi"
   - sh -c "if [ '$TRAVIS_PHP_VERSION' != 'hhvm' ]; then php ocular.phar code-coverage:upload --format=php-clover clover.xml; fi"
 
-#&& make javascript-tests
+matrix:
+  include:
+  - php: 5.4
+    env: DB=mysql
+#  - php: 5.4
+#    env: DB=pgsql
+
+  allow_failures:
+  - php: hhvm
+  fast_finish: true
