--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ script:
   # Run phpunit tests
   - cd tests
   - phpunit --configuration phpunit.xml --testsuite unit-tests
+  - phpunit -c phpunit.integration.xml
 
   # Create coverage report
   - sh -c "if [ '$TRAVIS_PHP_VERSION' != 'hhvm' ]; then wget https://scrutinizer-ci.com/ocular.phar; fi"
